@@ -14,7 +14,7 @@ java {
     targetCompatibility = JavaVersion.VERSION_17
 }
 mainClassName = 'edu.mcw.rgd.dataload.ImportManager'
-String myAppName = 'PhenotypeAnnotation'
+String myAppName = 'phenotype-annotation-pipeline'
 
 project.archivesBaseName = myAppName
 
@@ -26,13 +26,13 @@ dependencies {
     implementation ('org.apache.commons:commons-dbcp2:2.12.0') {
         exclude group: 'commons-logging', module: 'commons-logging'
     }
-    implementation 'commons-net:commons-net:3.11.0'
+    implementation 'commons-net:commons-net:3.11.1'
     implementation ('org.apache.httpcomponents:httpclient:4.5.14') {
         exclude group: 'commons-logging', module: 'commons-logging'
     }
-    implementation 'org.apache.logging.log4j:log4j-core:2.22.1'
-    implementation 'com.oracle.database.jdbc:ojdbc10:19.22.0.0'
-    implementation 'org.springframework:spring-jdbc:6.1.11'
+    implementation 'org.apache.logging.log4j:log4j-core:2.23.0'
+    implementation 'com.oracle.database.jdbc:ojdbc10:19.23.0.0'
+    implementation 'org.springframework:spring-jdbc:6.1.12'
 
 
     implementation fileTree(dir: 'lib', include: '*.jar')
